--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,8 +35,10 @@ file.reference.commons-io-2.4.jar=lib/commons-io-2.4.jar
 file.reference.commons-lang-2.6.jar=lib/commons-lang-2.6.jar
 file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
 file.reference.ezmorph-1.0.6.jar=lib/ezmorph-1.0.6.jar
+file.reference.hamcrest-core-1.3.jar=/Users/Chelny/Workspaces/NetBeansProjects/hamcrest-core-1.3.jar
+file.reference.hamcrest-core-1.3.jar-1=lib/hamcrest-core-1.3.jar
 file.reference.json-lib-2.4-jdk15.jar=lib/json-lib-2.4-jdk15.jar
-file.reference.junit-4.11.jar-1=/Users/Chelny/Workspaces/NetBeansProjects/junit-4.11.jar
+file.reference.junit-4.11.jar=lib/junit-4.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -47,7 +49,8 @@ javac.classpath=\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.ezmorph-1.0.6.jar}:\
     ${file.reference.json-lib-2.4-jdk15.jar}:\
-    ${file.reference.junit-4.11.jar-1}
+    ${file.reference.hamcrest-core-1.3.jar-1}:\
+    ${file.reference.junit-4.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,7 +61,8 @@ javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${file.reference.junit-4.11.jar-1}
+    ${file.reference.hamcrest-core-1.3.jar-1}:\
+    ${file.reference.junit-4.11.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
